# project-astral

./: .gitignore  CMakeLists.txt  README.md
ProjectAstral/: ProjectAstral.sln  ProjectAstral.vcxproj  vcpkg.json
assets/: fragment_core.glsl  fragment_core2.glsl  vertex_core.glsl
include/: Shader.hpp
src/: Shader.cpp  main.cpp
